assets/css/app.comp.css
/* ... */
    @media only screen and (min-width: 37.5em) {
      .endgame__social--text {
        font-size: 4rem;
        margin-bottom: 3rem; } }
  .endgame__social-links {
    display: flex;
    width: 100%;
    justify-content: center; }
    .endgame__social-links--link {
      display: grid;
      grid-template-columns: min-content 1fr;
      place-items: center;
      font-size: 1.6rem;
      margin: 1rem;
      width: 17.5rem;
      text-decoration: none;
      font-family: "Roboto", sans-serif;
      color: white;
      font-weight: 600;
      letter-spacing: 0.1rem;
      border-radius: 0.2rem;
      border: 0.2rem solid transparent; }
      @media only screen and (min-width: 37.5em) {
        .endgame__social-links--link {
          font-size: 2.25rem; } }
      .endgame__social-links--link:focus, .endgame__social-links--link:hover, .endgame__social-links--link:active {
        border: solid 0.2rem #fffff6; }
      .endgame__social-links--link > i {
        font-size: 2rem;
        margin: 0.5rem; }
        @media only screen and (min-width: 37.5em) {
          .endgame__social-links--link > i {
            font-size: 3rem; } }
    @media only screen and (min-width: 37.5em) {
      .endgame__social-links {
        justify-content: space-between; } }
    @media only screen and (min-width: 56.25em) and (max-height: 56.25em) {
      .endgame__social-links {
        padding: 0 3rem; } }

#facebook-share {
  background-color: #3b5998; }

#twitter-share {
  background-color: #1da1f2; }

.header {
  position: relative;
  height: 35%;
  z-index: 10;
  background-color: transparent; }
  @media only screen and (min-width: 56.25em) and (max-height: 56.25em) {
    .header {
      height: 15%; } }
  .header--about {
    height: 15%;
    background-color: #9dbe39;
    color: #2d2b5a; }
  .header__title--menu, .header__title--about {
    /* To center the text within the heading */
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-transform: uppercase; }
  .header__title--menu {
    color: #9dbe39;
    text-shadow: 1px 1px 2px #fffff6;
    padding-top: 5rem;
    animation: display-delay 4s 0.25s both ease-in-out; }

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  background-color: #2d2b5a;
  height: 4rem;
  border-top: solid 0.2rem #9dbe39; }
  .footer__text {
    font-size: 1.6rem;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    color: #fffff6;
    text-align: center;
    padding-top: 1rem; }
    @media only screen and (min-width: 37.5em) {
      .footer__text {
        font-size: 1.8rem; } }
    .footer__text--link {
      color: #9dbe39;
      outline: none; }
      .footer__text--link :link,
      .footer__text--link :visited {
        color: #9dbe39; }
      .footer__text--link:hover, .footer__text--link:focus {
        color: #fffff6;
        font-weight: 700;
        text-decoration: underline; }
  .footer--main {
    animation: display-delay 1s 2.5s both linear; }
  .footer--footer {
    display: none; }

.game {
  position: relative;
  height: 100%; }
  .game__section {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    margin: 0 auto;
    height: 100%;
    background-color: #2d2b5a; }
    .game__section--heading {
      position: relative;
      height: 15%;
      background-color: #9dbe39;
      color: #2d2b5a;
      width: 100%; }
      .game__section--heading-text {
        /* To center the text perfectly within the heading */
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-transform: uppercase; }
    .game__section--options {
      height: 85%;
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      align-items: center;
      max-width: 600px;
      margin: auto; }
      .game__section--options > button {
        width: 20rem;
        font-weight: 600; }

#difficulty,
#game {
  display: none; }

.counters {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
  font-size: 2rem;
  font-family: "Roboto", sans-serif;
  background-color: #9dbe39;
  color: #2d2b5a; }
  @media only screen and (min-width: 56.25em) {
    .counters {
      padding: 1rem 25%; } }
  .counters ~ * {
    margin: 0 auto;
    max-width: 700px; }
    @media only screen and (min-width: 87.5em) {
      .counters ~ * {
        max-width: 900px; } }
    @media only screen and (min-width: 150em) {
      .counters ~ * {
        max-width: 1400px; } }
  @media only screen and (min-width: 37.5em) {
    .counters {
      font-size: 2.25rem; } }
  .counters__progress--text, .counters__score--text {
    font-weight: 600; }
  .counters__score {
    text-align: right; }

.flag {
  margin: 0 auto;
  height: auto;
  width: 100%;
  text-align: center;
  padding: 1rem;
  display: grid;
  place-items: center; }
  @media only screen and (min-width: 37.5em) {
    .flag {
      height: 35rem;
      width: 100%; } }
  @media only screen and (min-width: 56.25em) and (max-height: 56.25em) {
    .flag {
      height: 25rem;
      max-width: 500px; } }
  @media only screen and (min-width: 87.5em) {
    .flag {
      height: 40rem;
      max-width: 800px; } }
  @media only screen and (min-width: 150em) {
    .flag {
      height: 50rem;
      max-width: 1400px; } }
  .flag__img {
    object-fit: cover;
    margin: 0 auto;
    max-width: 80%;
    max-height: 100%;
    box-shadow: 0 0 1rem rgba(14, 31, 47, 0.4);
    border: solid 0.2rem #fffff6; }
    @media only screen and (min-width: 56.25em) and (max-height: 56.25em) {
      .flag__img {
        height: 100%; } }

.question {
  font-size: 2rem;
  font-family: "Roboto", sans-serif;
  text-align: center;
  color: #fffff6;
  font-weight: 500;
  padding: 1rem; }
  @media only screen and (min-width: 37.5em) {
    .question {
      font-size: 3rem;
      line-height: 3.5rem; } }
/* ... */

